--- a/fc/package.json
+++ b/fc/package.json
@@ -7,16 +7,18 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --timeout 20000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "mongoose": "^5.4.19",
-    "passport-local-mongoose": "^5.0.1"
+    "node-fetch": "^2.3.0",
+    "passport-local-mongoose": "^5.0.1",
+    "url-router": "^7.1.5"
   },
   "devDependencies": {
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.3",
     "should": "^13.2.3"
   }
 }
