--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "gradient-color": "^2.0.1",
+    "markdown-it": "^8.4.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
@@ -26,7 +27,7 @@
     "node-sass": "^4.11.0",
     "react-test-renderer": "^16.7.0",
     "sass-loader": "^7.1.0",
-    "umi": "^2.6.13",
+    "umi": "^2.6.14",
     "umi-plugin-react": "^1.4.0"
   },
   "lint-staged": {
