--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "gradient-color": "^2.0.1",
     "markdown-it": "^8.4.2",
+    "qrcode": "^1.3.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
