--- a/fc/package.json
+++ b/fc/package.json
@@ -12,13 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.4.19",
     "node-fetch": "^2.3.0",
     "passport-local-mongoose": "^5.0.1",
     "url-router": "^7.1.5"
   },
   "devDependencies": {
-    "mocha": "^6.1.3",
+    "mocha": "^6.2.0",
     "should": "^13.2.3"
   }
 }
