--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "gradient-color": "^2.0.1",
     "js-yaml": "^3.13.1",
     "markdown-it": "^8.4.2",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "qrcode": "^1.3.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
