--- a/web/src/data/tna3/tna3-baoming.yaml
+++ b/web/src/data/tna3/tna3-baoming.yaml
@@ -197,4 +197,11 @@
         player: Ak1Ra、24
         est: PT1H35M
         guide: Ashes小志
-    
+    -
+        cnName: 仙剑奇侠传
+        enName: "Legend of Sword and Fairy"
+        abbr: New_Legend_of_Sword_and_Fairy
+        category: 待定
+        player: 丿灬夜狼
+        est: PT145M
+        guide: shalou88沙漏哥
