--- a/web/src/data/kksk2/kksk2-schedule.yaml
+++ b/web/src/data/kksk2/kksk2-schedule.yaml
@@ -149,7 +149,7 @@ DAY2:
     enName: Moster Hunter：World
     abbr: mhw
     category: "1V1 竞速"
-    player: 莫桑 & 幻金皓月
+    player: 黑化由岐 & 幻金皓月
     est: PT30M
     time: 2019-10-20 12:30
     layout: single-16-9
