--- a/web/src/data/kksk2/kksk2-schedule.yaml
+++ b/web/src/data/kksk2/kksk2-schedule.yaml
@@ -172,7 +172,7 @@ DAY2:
     enName: "Sekiro: Shadow die twice"
     abbr: sekiro
     category: 全佛珠
-    player: 痴人思梦
+    player: 痴人思梦 & Ak1Ra、24
     est: PT1H45M
     guide: 
     time: 2019-10-20 14:30
