--- a/web/src/data/tna3/tna3-schedue.yaml
+++ b/web/src/data/tna3/tna3-schedue.yaml
@@ -259,7 +259,7 @@ DAY3:
     category: NG 全记忆 全佛珠
     player: Ak1Ra、24
     est: PT1H35M
-    guide: 玉米 & 小志
+    guide: 玉米
     time: 2019-10-06 18:15
     layout: single-16-9
   -
@@ -279,7 +279,7 @@ DAY3:
     enName: Moster Hunter：World
     abbr: mhw
     category: 特定任务挑战
-    player: "诗皖 & 废料女粉"
+    player: 诗皖
     est: PT40M
     guide: 不可燃废料
     time: 2019-10-06 20:50
