--- a/web/src/data/kksk2/kksk2-schedule.yaml
+++ b/web/src/data/kksk2/kksk2-schedule.yaml
@@ -9,8 +9,6 @@ DAY1:
     est: PT1H
     time: 2019-10-19 09:10
     layout: single-4-3
-    info:
-      platform: PC
   -
     id: 1-2
     cnName: 开场白
@@ -32,8 +30,6 @@ DAY1:
     est: PT30M
     time: 2019-10-19 10:30
     layout: single-16-9
-    info:
-      platform: PC
   -
     id: 1-4
     cnName: 空洞骑士
@@ -44,8 +40,7 @@ DAY1:
     est: PT1H
     guide: 
     time: 2019-10-19 11:30
-    type: race
-    layout: race-16-9-2
+    layout: single-16-9
   -
     id: 1-5
     cnName: 你行你上 DAY1
@@ -56,8 +51,6 @@ DAY1:
     est: PT30M
     time: 2019-10-19 13:30
     layout: single-16-9
-    info:
-      platform: PC
   -
     id: 1-6
     cnName: 洛克人 11
@@ -70,8 +63,6 @@ DAY1:
     est: PT50M
     time: 2019-10-19 14:10
     layout: single-16-9
-    info:
-      platform: PC
   -
     id: 1-7
     cnName: 耻辱 2
@@ -82,8 +73,6 @@ DAY1:
     est: PT30M
     time: 2019-10-19 15:30
     layout: single-16-9
-    info:
-      platform: PC
   -
     id: 1-8
     cnName: 血源诅咒
@@ -94,8 +83,6 @@ DAY1:
     est: PT50M
     time: 2019-10-19 16:10
     layout: single-16-9
-    info:
-      platform: PS4
 
 DAY2:
   -
@@ -118,7 +105,7 @@ DAY2:
     player: 喂狗组全员
     est: PT20M
     time: 2019-10-20 10:10
-    layout: single-4-3
+    layout: single-16-9
     type: pre
   -
     id: 2-3
@@ -129,7 +116,7 @@ DAY2:
     player: DarkSlayer
     est: PT60M
     time: 2019-10-20 10:30
-    layout: single-4-3
+    layout: single-16-9
     type: pre
   -
     id: 2-4
@@ -141,8 +128,6 @@ DAY2:
     est: PT30M
     time: 2019-10-20 12:00
     layout: single-16-9
-    info:
-      platform: PS4
   -
     id: 2-5
     cnName: 怪物猎人世界：冰原
@@ -150,11 +135,12 @@ DAY2:
     abbr: mhw
     category: "1V1 竞速"
     player: 黑化由岐 & 幻金皓月
+    players: 
+      - 黑化由岐 
+      - 幻金皓月
     est: PT30M
     time: 2019-10-20 12:30
-    layout: single-16-9
-    info:
-      platform: PS4
+    layout: race-16-9
   -
     id: 2-6
     cnName: 武士刀 · 零
@@ -173,10 +159,13 @@ DAY2:
     abbr: sekiro
     category: 全佛珠
     player: 痴人思梦 & Ak1Ra、24
+    players:
+      - 痴人思梦
+      - Ak1Ra、24
     est: PT1H45M
     guide: 
     time: 2019-10-20 14:30
-    layout: single-16-9
+    layout: race-16-9
   -
     id: 2-8
     cnName: 蔚蓝
