--- a/web/src/data/kksk2/kksk2-schedule.yaml
+++ b/web/src/data/kksk2/kksk2-schedule.yaml
@@ -120,7 +120,7 @@ DAY2:
     type: pre
   -
     id: 2-4
-    cnName: 你行你上
+    cnName: 你行你上 DAY2
     enName: YCYU
     abbr: tnarun-kksk2
     category: 怪物猎人速杀挑战
