--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "gradient-color": "^2.0.1",
     "js-yaml": "^3.13.1",
     "markdown-it": "^8.4.2",
+    "markdown-to-jsx": "^6.10.3",
     "mobx": "^5.15.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
