--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "markdown-it": "^8.4.2",
     "markdown-to-jsx": "^6.10.3",
     "mobx": "^5.15.1",
+    "mobx-react": "^6.1.5",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "qrcode": "^1.3.3",
